--- a/samples/rockauto.html
+++ b/samples/rockauto.html
@@ -18,7 +18,7 @@
 </body>
 <!--
 <script src="https://cdn.jsdelivr.net/gh/jooher/dap/0.4.min.js"></script>
--->
-<script src="https://dap.js.org/0.4.js"></script>
+https://dap.js.org-->
+<script src="../0.4.js"></script>
 <script src="rockauto.js"></script>
 </html>
