--- a/samples/rockauto.html
+++ b/samples/rockauto.html
@@ -5,6 +5,7 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<title>Rockauto</title>
+	<link rel="stylesheet" href="rockauto.css"/>
 </head>
 
 <body>
