--- a/samples/carparts/index.html
+++ b/samples/carparts/index.html
@@ -5,7 +5,7 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<title>Rockauto</title>
-	<link rel="stylesheet" href="styles.css"/>
+	<link rel="stylesheet" href="rockauto.css"/>
 </head>
 
 <body>
@@ -15,110 +15,43 @@
 	<span>If you're looking for car parts, see <a href="http://rockauto.com" rel="nofollow">Rockauto own website</a>.</span>
 </div>
 
-<script src="https://dap.js.org/0.4.js">
+<script src="https://dap.js.org/0.4.js" _src="0.4.js">
 
-</script><script>
+</script>
+<script>
 
 const	
 cents	= num => Math.round(num*100)/100,
 
-datarow = el=>{
-	r=Object.assign({},el.$[0]['']);
-	delete r[""];
-	return r;
-},
-
-Shared	=(item,key,sort)=>{ // //keeps the data coherent among several tabs
-
-	const	storage	= localStorage,
-		Json	= dap.Env.Json,
-		
-		take	= ()=> data=Json.decode(storage.getItem(item)):[],
-		
-		save	= d=>{
-				try{storage.setItem(item,Json.encode(d));}
-				catch(e){console.warn("can't save: "+e.message)}
-				return data=d;
-			}
-		
-	let	data	= null;
+Shared	=(item,key,sort)=>{ // keeps the data coherent among several tabs
+	var	data	= null,
+		storage	= localStorage,
+		Json	= dap.Env.Json;
 		
 	return {
-		anew	:newdata=>save(newdata)&&data,
-		find	:entry=>data&&data[entry[key]],
-		sync	:entry=>{
-		
+	
+		sync	:function(entry){
+			try{
+				const v=storage.getItem(item);
+				data=v?Json.decode(v):null;
+			}catch(e){};
+			
 			if(entry)(data||(data={}))[entry[key]]=entry;
 			
 			if(!data)return;
+
+			try{storage.setItem(item,Json.encode(data));}catch(e){};
 			
-			save(data);
-			
-			if(sort){
-				var arr=[];
-				for(var i in data)arr.push(data[i]);
-				return arr.sort(sort):arr;
-			}
-		}
-	}
-},
-
-Drag =(()=>{
-
-	let
-	dragged	= null;
-
-
-	const
-	
-	listen	= (el,ev,h)=>el.addEventListener(ev,h),
-	
-	types	={
-	
-		reorder	:{
+			var arr=[];
+			for(var i in data)arr.push(data[i]);
+			return sort?arr.sort(sort):arr;
+		},
 		
-			dragstart: e=>{
-				dragged = e.target;
-				dragged.style.opacity=.5;
-			},
+		find	:function(entry){return data&&data[entry[key]]},
 		
-			dragenter: e=>{
-				const entered=e.target;
-				if(entered.parentNode!=dragged.parentNode)
-					return;
-				if(dragged!=entered)
-					entered.parentNode.insertBefore(dragged,entered);
-				e.stopPropagation();
-			},
-			
-			dragover: e=>{
-				if(dragged.parentNode == e.target.parentNode)
-					e.preventDefault();
-			},
-			
-			dragend: e=>{
-				dragged.style.opacity=1;
-				dap.Execute.u(dragged.parentNode,'reorder');
-			}
-		}
-	
-	};
-	
-	
-	return	(value,alias,node)=>{
-		const	evs=types[alias];
-		node.draggable=true;
-		if(evs){
-			for(let e in evs)
-				listen(node,e,evs[e]);
-		}
-		else
-			console.error("unknown drag type: "+alias);
+		clear	:function(){storage.setItem(item,null); return null;}
 	}
-
-})()
-
-;
+};
 
 
 
@@ -127,7 +60,7 @@ Drag =(()=>{
 .d("$make=. $year=. $model=. $carcode=. $engine=. $parttype=. $parttypename=.; $carname=( .year .make .model .engine )spaced $cart=:cart.sync $cars=:cars.sync"
 	,'caption'.d("! caption").ui("home")
 	,'cart'.d("? $cart"
-		,'action.clear'.d("! dict.cart.clear").ui("? (dict.cart.confirmclear)confirm; $cart=:cart.anew")
+		,'action.clear'.d("! dict.cart.clear").ui("? (dict.cart.confirmclear)confirm; $cart=:cart.clear")
 		,'TABLE'.d(""
 			,'TBODY'.d(".carcode=; *@ $cart"
 				,'TR.cartitem'.d("?! .qty@0"
@@ -148,17 +81,15 @@ Drag =(()=>{
 	)
 	,'setcar'.d(""
 		,'mycars'.d("! dict.mycars; *@ $cars"
-			,'carname'
-			.d("! .carname; drag@reorder")
-			.ui("$carname=. $carcode=. $year=. $make=. $model=. $engine=.")
-		).e("reorder","$cars=#:dataset,cars.anew")
+			,'carname'.d("! .carname").ui("$carname=. $carcode=. $year=. $make=. $model=. $engine=.")
+		)
 		,'findcar'.d(""
 			,'year-make'.d(""			
 				,'SELECT.year'.ui("$year=#:value").d("Options( year.label year.options $year@selected)")
 				,'SELECT.make'.ui("$make=#:value").d("Options( make.label make.options $make@selected)")
 			).u("$carcode= $carname= $model=")
 
-			,'SELECT.model'.ui("$model=#:value $carcode= $carname= $engine=")
+			,'SELECT.model'.ui("$model=#:value $carcode= $carname=")
 			.d("? ($year $make)!; ? .models:??=( base@ $make $year )uri:query (error.no-models)alert; "
 			  +"Options( model@label .models@options $model@selected)")
 			
@@ -247,7 +178,7 @@ Drag =(()=>{
 		
 		
 	Hint	: 'OPTION selected disabled'.d("! .label"),
-	Options	: 'OPTGROUP'.d("! (.selected:! Hint)!; * .options@value; Option( .value ..selected )"), 
+	Options	: 'OPTGROUP'.d("{? .selected:!; ! Hint}; { * .options@value; Option( .value ..selected ) }; { ? (.options:?? `1)eq; u! @change }"),//(.selected:!)!
 	Option	: 'OPTION'.d("!! (.label .value)? .value (.value .selected)eq@selected")
 
 })
@@ -255,7 +186,7 @@ Drag =(()=>{
 	convert	:{
 		time	:dummy	=>Date.now(),
 		tidy	:html	=>replaceMulti(html,htmljunk),
-		price	:num	=>cents(num.substr(1)),
+		price	:num	=>num.substr(1), // cents(num),//   {return Math.round(parseFloat(value)*1.5)-.01},
 		engines	:array	=>array.map(m=>m.engine),
 		cars	:Shared("cars","carcode"),
 		cart	:Shared("cart","partkey",(a,b)=>(a.carcode-b.carcode||a.parttype-b.parttype||a.price-b.price||a.partkey-b.partkey)),
@@ -267,16 +198,10 @@ Drag =(()=>{
 						pos++, qty+=q, amt+=q*p;
 				return {pos:pos,qty:qty,amt:cents(amt)};
 			},
-		comma	:str => str?str.split(","):null,
-		dataset	:elem=> {
-			const	ch=[...elem.children],
-				rows = ch.map(datarow);
-			return rows;
-		}
-		
+		comma	:str => str?str.split(","):null
 	},
 	flatten	:{
-		find	:(values,tags)=>{
+		"find"	:(values,tags)=>{
 				var rows=values.pop();
 				for(var i=values.length; i--; ){
 					var key=tags[i],match=values[i];
@@ -287,13 +212,10 @@ Drag =(()=>{
 			}
 	},
 	operate	:{
-		home	:value => {window.scroll({top:0, behavior:"smooth"})},
-		drag	:Drag
+		home	:value => {window.scroll({top:0, behavior:"smooth"})}
 	}
 })
 .RENDER();
-
-
 
 </script>
 </body>
