--- a/samples/carparts/index.html
+++ b/samples/carparts/index.html
@@ -5,7 +5,7 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<title>Rockauto</title>
-	<link rel="stylesheet" href="rockauto.css"/>
+	<link rel="stylesheet" href="styles.css"/>
 </head>
 
 <body>
