--- a/samples/geektricks.html
+++ b/samples/geektricks.html
@@ -2,7 +2,7 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<title>Geek tricks</title>
-	<link href="styles.css" rel="stylesheet" type="text/css"/>	
+	<link href="/docs/styles.css" rel="stylesheet" type="text/css"/>	
 </head>
 <body>
 
