--- a/samples/carparts/index.html
+++ b/samples/carparts/index.html
@@ -15,7 +15,7 @@
 	<span>If you're looking for car parts, see <a href="http://rockauto.com" rel="nofollow">Rockauto own website</a>.</span>
 </div>
 
-<script _src="https://dap.js.org/0.4.js" src="0.4.js">
+<script src="https://dap.js.org/0.4.js" _src="0.4.js">
 
 </script><script>
 
