--- a/samples/carparts/index.html
+++ b/samples/carparts/index.html
@@ -71,7 +71,7 @@ Persist	=((storage,box,unbox)=>{ // keeps the data coherent among several tabs
 				}
 			};
 			
-		update();
+		sync();
 		
 		return	{data,find,anew,add,update,sync}
 	}
