--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 		<section>
 			<h3>Natively reactive</h3>
 			<p>
-			Reactivity is the base concept of dap. No need to manually track status changes, or even bother binding update events — all dependencies are resolved naturally under the hood. Dap renders and updates all the dependent elements automatically, based on their dap-rules.
+			Reactivity is the base concept of dap. No need to manually track state changes, or even bother binding update events — all dependencies are resolved naturally under the hood. Dap renders and updates all the dependent elements automatically, based on their dap-rules.
 			</p>
 		</section>
 
@@ -53,10 +53,20 @@
 		<h3>Simple to start, easy to advance</h3>
 		<p>A whole lot of magic can be done with the few "core" dap operations. But when it's time to go beyond — you can easily expand dap with your own custom operations or use third party extensions.</p>
 		</section>
+		
 
 	</article>
 
 </div>
+
+<section>
+	<h2>Is it better than React?</h2>
+	<p>Why go dap if there's React? Well, to my taste, React and similar frameworks are too verbose and cumbersome. Dap code is far, far cleaner. In dap code, you can clearly see the structure and logic of your program, often "one element = one line of code". Below are a couple of simple examples inspired by the canonical tutorials from React and Angular. You're welcome to compare the ideas and approaches behind dap and other frameworks.</p>
+	<ul>
+		<li><a href="samples/tictactoe.html" target="_blank">Tic Tac Toe</a>. Inspired by <a href="https://reactjs.org/tutorial/tutorial.html" target="_blank" rel="nofollow">React tutorial</a></li>
+		<li><a href="samples/toh.html" target="_blank">Tour of Heroes</a>. Inspired by <a href="https://angular.io/tutorial/" target="_blank" rel="nofollow">Angular tutorial</a></li>
+	</ul>
+</section>
 
 
 <section>
@@ -104,11 +114,6 @@ Templates are rendered into actual DOM elements, from parent <em>down</em> to ch
 
 <article>
 	<h2>Dap and other reactive frameworks</h2>
-	<p>Below are a few simple examples of how easily data/event-driven applications can be built with dap. Examples below are inspired by the examples from other reactive frameworks, such as React, Angular, etc. so if you're familiar with any of those, you're welcome compare the ideas and approaches behind dap and other frameworks.</p>
-	<ul>
-		<li><a href="samples/tictactoe.html">Tic Tac Toe</a>. Inspired by <a href="https://reactjs.org/tutorial/tutorial.html" target="_blank" rel="nofollow">React tutorial</a></li>
-		<li><a href="samples/toh.html">Tour of Heroes</a>. Inspired by <a href="https://angular.io/tutorial/" target="_blank" rel="nofollow">Angular tutorial</a></li>
-	</ul>
 </article>
 <p>Coming soon: writing a real-world dap application</p>
 
