--- a/index.html
+++ b/index.html
@@ -109,7 +109,8 @@ Templates are rendered into actual DOM elements, from parent <em>down</em> to ch
 
 <h3>So far, so simple, isn't it?</h3>
 <img src="docs/we_need_to_go_deeper.jpg" alt="But we need to go deeper" title="But we need to go deeper"/>
-<p>Now, let's go deeper with <a href="docs/">Understanding dap</a>!</p>
+
+<h2>Now, let's go deeper with <a href="docs/">Understanding dap</a>!</h2>
 
 
 
