--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<title>Dap.js</title>
 	<link href="docs/styles.css" rel="stylesheet" type="text/css"/>	
+	<link href="docs/dapify.css" rel="stylesheet" type="text/css"/>	
 </head>
 <body>
 
