--- a/tests/polyrule.html
+++ b/tests/polyrule.html
@@ -10,34 +10,7 @@
 	</head>
 	<body>  
 		<script>
-/*
-'favorite-fruit'.d("$choice="
-	,'o'.d("{* fruit; ! .fruit; ! `+}; ! `here")
-	,'B.selected'.d("! title ($choice not-yet)?")
-	,'UL.options'
-		.d("* fruit"
-			,'LI'	.d("! .fruit")
-				.ui("$choice=.fruit")
-		)
-		.d("* veg"
-			,'LI.side'.d("! .veg")
-		)
-		.d("! `done")
-		.d(""
-			,'LI.last'.d("! `last")
-		)
-
-)
-.DICT({
-	title:"My favorite fruit is ",
-	"not-yet":"what?",
-	fruit:["apple","orange","tomato","banana"],
-	veg:["spinach","onion","cabbage"]
-})
-*/
-
-
-'H2'.d("! `Click").ui("? :alert`click")
+'BUTTON'.d("! `Click").ui(":query`https://mighty-sands-8773.herokuapp.com/; ! `.")
 
 .RENDER()
 		</script>
