--- a/samples/todo.html
+++ b/samples/todo.html
@@ -9,6 +9,7 @@
 		.EMPTY{display:none !important}
 		[ui]{cursor:pointer}
 		#filters>li {margin:.2em}
+		#filters>li:hover{text-decoration:underline}
 	</style>
 	</style>
 </head>
