--- a/samples/todo.html
+++ b/samples/todo.html
@@ -24,7 +24,7 @@ const	active = todo=>!todo.completed,
 	,'#header'.d(""
 		,'H1'.d("! `todos")
 		,'INPUT#new-todo placeholder="What needs to be done?" autofocus'
-			.ui("$todos=($todos (#:value@title) )append #.value= (@method`POST root@url headers :json.encode@body):query")
+			.ui(".title=#:value $todos=($todos (.title) )append (@method`POST root@url headers (.title):json.encode@body):query #.value=")
 	)
 	,'#main'.d(""
 		,'#toggle-all type=checkbox'.ui("$todos=$todos:toggle")
