--- a/samples/todo.html
+++ b/samples/todo.html
@@ -29,11 +29,11 @@ const	active = todo=>!todo.completed,
 	,'#main'.d(""
 		,'#toggle-all type=checkbox'.ui("$todos=$todos:toggle")
 		,'UL#todo-list'.d("* ($todos $filter)filter"
-			,'LI'.d("$editing= $completed=.; a!"
+			,'LI'.d("$editing= $completed=.; {? .url:!; % (@method`POST root@url headers (.title):json.encode@body):query}; a!"
 			
 				,'INPUT.toggle type=checkbox'
 					.d("#.checked=$completed")
-					.ui("$patch=($completed=.completed=$completed:!)")
+					.ui("$patch=(.completed=$completed=$completed:!)")
 					
 				,'LABEL'
 					.d("? $editing:!; ! .title")
@@ -50,7 +50,6 @@ const	active = todo=>!todo.completed,
 			)
 			.a("!? $editing $completed")
 			.u("? $patch; % (@method`PATCH .url:https headers $patch:json.encode@body):query; $editing= $patch=")
-			.d("? .url:!; % (@method`POST root@url headers (.title):json.encode@body):query")
 		)
 	)
 	,'#footer'.d("$patch $left=$todos:left $done=$todos:done"
