--- a/samples/tutorial/15.html
+++ b/samples/tutorial/15.html
@@ -18,8 +18,13 @@ const
   };
 
 '#todoapp'
-.a("#! ($filter)")
-.d("& #!; $todos= $filter=. $recount="
+.d("$todos= $filter= $recount="
+/*
+  ,'state'
+    .d("watchstate")
+    .a("state $filter")
+    .e("state","$filter=:state")
+*/
   ,'#header'.d(""
     ,'H1'.d("")
     ,'INPUT#new-todo placeholder="What needs to be done?" autofocus'
