--- a/samples/todo.html
+++ b/samples/todo.html
@@ -48,8 +48,8 @@ const	active = todo=>!todo.completed,
 				
 			)
 			.a("!? $editing $completed")
-			.u("? $patch; % (@method`PATCH .url:dehttp headers $patch@):query; $editing= $patch=")
-			.d("? .url:!; % (@method`POST todos@url headers $):query")
+			.u("? $patch; & (@method`PATCH .url:dehttp headers $patch@):query; $editing= $patch=")
+			.d("? .url:!; & (@method`POST todos@url headers $):query")
 		)
 	)
 	,'#footer'.d("$patch $left=$todos:left $done=$todos:done"
