--- a/samples/tutorial/7-3.html
+++ b/samples/tutorial/7-3.html
@@ -20,6 +20,7 @@
         ,'INPUT.toggle type=checkbox'
           .d("#.checked=.completed")
           .ui("$patch=($completed=#.checked)")
+        ,'LABEL.view'
           .d("? $editing:!; ! .title")
           .e("dblclick","$editing=`yes")
         ,'INPUT.edit'
