--- a/samples/tutorial/12-1.html
+++ b/samples/tutorial/12-1.html
@@ -26,7 +26,7 @@ const
   ,'#main'.d(""
   
     ,'INPUT#toggle-all type=checkbox'
-      .ui("*@ $todos=($todos (#.checked@completed)@src):assign; (@method`PATCH .url headers (.completed)):query")
+      .ui("*@ $todos=($todos (#.checked@completed)@src):assign; (@method`PATCH .url:dehttp headers (.completed)):query")
         
     ,'UL#todo-list'.d("* ($todos $filter):filter"
     
