--- a/samples/tutorial/16.html
+++ b/samples/tutorial/16.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>Todo -- dap sample</title>
   <link rel="stylesheet" href="https://www.todobackend.com/client/css/vendor/todomvc-common.css"/>
-  <script src="/0.4.js" _src="https://dap.js.org/0.4.js"></script>
+  <script src="/0.54a.js" _src="https://dap.js.org/0.4.js"></script>
   <style>
     [ui=click]{cursor:pointer}
   </style>
