--- a/samples/stacks/index.html
+++ b/samples/stacks/index.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<title>Stacks (http://dap.js.org sample)</title>
+		<meta name="viewport" content="width=device-width"/>
 		<link rel="stylesheet" href="styles.css"/>
 		<script src="/0.5a74.js"></script>
 	</head>
